--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
       with:
         name: springboot-jar
         path: target/*.jar
+
     # Docker Build & Push
     - name: Build Docker Image
       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/sample05:latest .
@@ -38,3 +39,13 @@ jobs:
 
     - name: Push Docker Image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/sample05:latest
+
+    # Deploy to Remote Server
+    - name: Setup SSH key
+      uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Run deploy script on remote server
+      run: |
+        ssh -p 35553 -o StrictHostKeyChecking=no tiger@serveo.net "bash ~/sample05/deploy.sh"
